Improve LinkedList call in day 3